--- a/_posts/2024-04-19-lines.md
+++ b/_posts/2024-04-19-lines.md
@@ -69,6 +69,8 @@ function createProgram() {
     console.error(`fs info-log: ${gl.getShaderInfoLog(frag_shader)}`);
     throw new Error('Error creating program');
   }
+  gl.deleteShader(vert_shader);
+  gl.deleteShader(frag_shader);
   return prog;
 }
 
