Add post on star

--- a/_posts/2024-04-19-lines.md
+++ b/_posts/2024-04-19-lines.md
@@ -8,7 +8,7 @@ hascanvas: true
 hasmath: true
 ---
 
-Basics.
+Back to basics.
 
 Click( or touch ) the square above to cycle through lines, a line strip, and a line loop.
 
@@ -16,7 +16,7 @@ No coordinate transformations here. All vertices are in the clip coordinate syst
 
 According to the latest standard, a WebGL implementation is obliged to support only a line width of 1. Firefox gives me 1 on the desktop and the specified 5 on a mobile. Google Chrome gives me 5 both on the desktop and mobile.
 
-The vertex coordinates are from an OpenGL program discussed in a draft version of a computer graphics book available [here](https://mathweb.ucsd.edu/~sbuss/MathCG2/).
+The vertex coordinates are from an OpenGL program discussed in a draft version of a computer graphics book available [here](https://mathweb.ucsd.edu/~sbuss/MathCG2/). This is mostly a WebGL version of that OpenGL program.
 
 The code:
 
