Correct formatting issues

--- a/_posts/2024-04-21-star.md
+++ b/_posts/2024-04-21-star.md
@@ -22,6 +22,7 @@ The code:
 
 {% highlight javascript linenos %}
 const vert_shader_src = `#version 300 es
+#pragma vscode_glsllint_stage: vert
 precision highp float;
 
 in vec3 position;
@@ -31,22 +32,23 @@ uniform float u_rot;
 
 void main(void) {
   mat3 rot_mat = mat3(cos(u_rot), sin(u_rot), 0.0, -sin(u_rot), cos(u_rot), 0.0, 0.0, 0.0, 1.0);
-	gl_Position = vec4(rot_mat*position, 1.0);
-	color = vertex_color;
+  gl_Position = vec4(rot_mat*position, 1.0);
+  color = vertex_color;
 }`;
 
 const frag_shader_src = `#version 300 es
+#pragma vscode_glsllint_stage: frag
 #ifdef GL_FRAGMENT_PRECISION_HIGH
-	precision highp float;
+  precision highp float;
 #else
-	precision mediump float;
+  precision mediump float;
 #endif
 
 in vec3 color;
 out vec4 frag_color;
 
 void main(void) {
-	frag_color = vec4(color, 1.0);
+  frag_color = vec4(color, 1.0);
 }`;
 
 const g = {}; //globals
